log

Thu 14 Mar 2024 08:37:54 PM UTC: 
 exercises.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include<ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include<ctype.h>
      | ^
exercises.c:1:11: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include<ctype.h>
      |           ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
e17d97d
Thu 14 Mar 2024 08:38:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
eef70e1
Thu 14 Mar 2024 08:39:56 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
ebf92bc
Thu 14 Mar 2024 08:40:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:14:7: error: unused variable ‘max’ [-Werror=unused-variable]
   14 |   int max = arr[0];
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
8dbae6c
Thu 14 Mar 2024 08:41:06 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|7
total_score: 0/70
d46cd82
Thu 14 Mar 2024 08:41:28 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|7
total_score: 0/70
8817560
Thu 14 Mar 2024 08:44:32 PM UTC: 
 exercises.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/70
c6f14a9
Thu 14 Mar 2024 08:45:36 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
7a0e735
Thu 14 Mar 2024 08:46:59 PM UTC: 
 exercises.c | 15 +++------------
 1 file changed, 3 insertions(+), 12 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:17:10: error: ‘max’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   17 |   return max;
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
7e5d21d
Thu 14 Mar 2024 08:47:42 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:14:7: error: variable ‘max’ set but not used [-Werror=unused-but-set-variable]
   14 |   int max, i;
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
0a1eaa2
Thu 14 Mar 2024 08:47:58 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:19:9: error: ‘max’ undeclared (first use in this function); did you mean ‘fmax’?
   19 |         max = arr[i];
      |         ^~~
      |         fmax
exercises.c:19:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
241471c
Thu 14 Mar 2024 08:48:31 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
5027d6b
Thu 14 Mar 2024 08:50:07 PM UTC: 
 exercises.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:25:10: error: ‘max’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   25 |   return max;
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
a954230
Thu 14 Mar 2024 08:50:34 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
7ed0c67
Thu 14 Mar 2024 08:51:49 PM UTC: 
 exercises.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:18:30: error: expected statement before ‘)’ token
   18 |         if(arr[i] < arr[i+1]))
      |                              ^
exercises.c:13:7: error: variable ‘max’ set but not used [-Werror=unused-but-set-variable]
   13 |   int max, i;
      |       ^~~
exercises.c: At top level:
exercises.c:21:10: error: expected declaration specifiers or ‘...’ before string constant
   21 |   printf("%i", max);
      |          ^~~~
exercises.c:21:16: error: unknown type name ‘max’
   21 |   printf("%i", max);
      |                ^~~
exercises.c:22:3: error: expected identifier or ‘(’ before ‘return’
   22 |   return 0;
      |   ^~~~~~
exercises.c:23:1: error: expected identifier or ‘(’ before ‘}’ token
   23 | }
      | ^
exercises.c: In function ‘findMax’:
exercises.c:20:5: error: control reaches end of non-void function [-Werror=return-type]
   20 |     }
      |     ^
cc1: all warnings being treated as errors
Compilation failed
27480c5
Thu 14 Mar 2024 08:52:01 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:19:30: error: expected statement before ‘)’ token
   19 |         if(arr[i] < arr[i+1]))
      |                              ^
Compilation failed
4a342ae
Thu 14 Mar 2024 08:52:07 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
c10965c
Thu 14 Mar 2024 08:54:17 PM UTC: 
 exercises.c | 13 ++++---------
 1 file changed, 4 insertions(+), 9 deletions(-)
 tests:  0|6
total_score: 10/70
b10e6c1
Thu 14 Mar 2024 08:58:22 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:33:14: error: expected expression before ‘]’ token
   33 |   return new[];
      |              ^
exercises.c:33:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   33 |   return new[];
      |          ^~~
exercises.c:26:6: note: declared here
   26 | void reverseArray(int arr[], int size) {
      |      ^~~~~~~~~~~~
exercises.c:27:7: error: variable ‘new’ set but not used [-Werror=unused-but-set-variable]
   27 |   int new[size], i, j;
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
a425ab5
Thu 14 Mar 2024 08:58:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:33:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   33 |   return new;
      |          ^~~
exercises.c:26:6: note: declared here
   26 | void reverseArray(int arr[], int size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
40aa6a2
Thu 14 Mar 2024 08:59:09 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:33:15: error: expected expression before ‘]’ token
   33 |   return (new[]);
      |               ^
exercises.c:33:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   33 |   return (new[]);
      |          ^
exercises.c:26:6: note: declared here
   26 | void reverseArray(int arr[], int size) {
      |      ^~~~~~~~~~~~
exercises.c:27:7: error: variable ‘new’ set but not used [-Werror=unused-but-set-variable]
   27 |   int new[size], i, j;
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
1c367cd
